# IotHubTesting

./: README.md  deployment.debug.template.json  deployment.template.json
influx_db/: Readme.md
infra/: .gitignore  README.md  sample.env
infra/azure-devops-pipelines/: api-webapp-CI.yml  preprovisioning.yml
infra/azure-devops-pipelines/tests/: main.yml
infra/layer_one/: README.md  readme.md
infra/layer_one/azure-devops-pipelines/: api-webapp-CD.yml  web-resource-provisioning.yml
infra/layer_one/azure-devops-pipelines/tests/: integration.yml
infra/layer_one/setup/: ubuntu_host_setup.sh
infra/layer_one/setup/ansible/: requirements.txt
infra/layer_one/src/: log_to_app_insights.py
infra/layer_two/: inventory  main.yml
infra/layer_two/group_vars/: all.yaml
infra/setup/: requirements.txt  ubuntu_setup.yml
infra/src/modules/archive/: azdo_create_ubuntu_worker.yml
infra/src/modules/network/: check_env_params.yml  example_usage.md
infra/src/modules/ubuntu_azdo_agent/: azdo-create-ubuntu-azdo-agent.yml  build_infrastructure.yml
modules/InfluxWriterModule/: Dockerfile.amd64.debug:Zone.Identifier
modules/SampleModule/: module.json
modules/filtermodule/: Dockerfile.amd64  Dockerfile.amd64.debug  Dockerfile.arm32v7  Dockerfile.arm32v7.debug  Dockerfile.arm64v8  Dockerfile.arm64v8.debug  Dockerfile.windows-amd64  ModuleBackgroundService.cs  Program.cs  module.json
python-stuff/: pyproject.toml
python-stuff/mqtt_python_sim/: reader_main.py  simple_reader.py  simple_writer.py  waveform_data.db  writer_main.py
(+44 files in other folders)
