[tool.poetry]
name = "python-stuff"
version = "0.1.0"
description = ""
authors = ["timmyreilly <timreilly@live.com>"]
readme = "README.md"
packages = [{include = "python_stuff"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
iotedgedev = "^3.3.7"
cryptography = "^39.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
