[tool.poetry]
name = "python-stuff"
version = "0.1.0"
description = ""
authors = ["timmyreilly <timreilly@live.com>"]
readme = "README.md"
packages = [{include = "python_stuff"}]

[tool.poetry.dependencies]
python = "^3.8"
azure-iot-hub = "^2.6.1"
wheel = "^0.38.4"
ansible-core = "2.11"
pywinrm = "^0.4.3"
paho-mqtt = "^1.6.1"
matplotlib = "^3.6.3"
numpy = "^1.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
